--- a/InterfacesEjercicio1/InterfacesEjercicio1.csproj
+++ b/InterfacesEjercicio1/InterfacesEjercicio1.csproj
@@ -47,9 +47,11 @@
     <Compile Include="Factura.cs" />
     <Compile Include="Iimprimible.cs" />
     <Compile Include="Impresora.cs" />
+    <Compile Include="Impuesto.cs" />
     <Compile Include="NotaCredito.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReciboSueldo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
