--- a/RelojDigital/RelojDigital.csproj
+++ b/RelojDigital/RelojDigital.csproj
@@ -6,6 +6,11 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationIcon>Stalker018-Mmii-Flat-Clock-digital.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="Stalker018-Mmii-Flat-Clock-digital.ico" />
+  </ItemGroup>
 
 </Project>
